Connected to database, defined Site schema

--- a/views/site-gallery.ejs
+++ b/views/site-gallery.ejs
@@ -21,7 +21,6 @@
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
       crossorigin="anonymous"
     ></script>
-    <script src="../site-gallery.js"></script>
     <title>Norwich Heritage Tours - Site Gallery</title>
   </head>
   <body>
@@ -70,7 +69,7 @@
       </div>
       <div class="row">
         <div class="col-md-3 col-sm-6 col-6 site-gallery-images">
-          <a onclick="showSiteDetails()">
+          <a href="/gallery/1">
             <img
             src="https://picsum.photos/200"
             class="img-fluid gallery-image"
