--- a/views/home.ejs
+++ b/views/home.ejs
@@ -20,14 +20,13 @@
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
       crossorigin="anonymous"
     ></script>
-    <script src="../home.js"></script>
     <title>Norwich Heritage Tours - Home</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="home.html">
-          <img src="../assets/images/logo.png" alt="Logo" width="25" height="30" class="d-inline-block align-text-top">
+        <a class="navbar-brand" href="/">
+          <img src="/images/logo.png" alt="Logo" width="25" height="30" class="d-inline-block align-text-top">
           Norwich Heritage Tours
         </a>
         <button
@@ -58,36 +57,44 @@
       </div>
       <div class="row home-main-content">
         <div class="col-md-3 col-sm-6 col-6 home-columns">
+          <a href="">
           <button class="home-button">
             <span class="material-icons">
               tour
               </span>
             <h5>Tours</h5>
           </button>
+          </a>
         </div>
         <div class="col-md-3 col-sm-6 col-6 home-columns">
-          <button id="gallery-button" class="home-button" onclick="siteGalleryScreen()">
+          <a href="/gallery">
+          <button id="gallery-button" class="home-button">
             <span class="material-icons">
               collections
               </span>
             <h5>Site Gallery</h5>
           </button>
+          </a>
         </div>
         <div class="col-md-3 col-sm-6 col-6 home-columns">
+          <a href="">
           <button class="home-button">
             <span class="material-icons">
               map
               </span>
             <h5>Map</h5>
           </button>
+          </a>
         </div>
         <div class="col-md-3 col-sm-6 col-6 home-columns">
+          <a href="">
           <button class="home-button">
             <span class="material-icons">
               more_horiz
               </span>
             <h5>More</h5>
           </button>
+          </a>
         </div>
       </div>
     </div>
