--- a/views/site-gallery.ejs
+++ b/views/site-gallery.ejs
@@ -26,12 +26,12 @@
   <body>
     <nav class="navbar navbar-expand-lg bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="home.html">
-          <span class="material-icons"> arrow_back_ios </span>
+        <a class="navbar-brand" href="/">
+          <span class="material-icons back-arrow"> arrow_back_ios </span>
         </a>
-        <a class="navbar-brand" href="home.html">
+        <a class="navbar-brand" href="/">
           <img
-            src="../assets/images/logo.png"
+            src="/images/logo.png"
             alt="Logo"
             width="25"
             height="30"
