--- a/views/site-screen.ejs
+++ b/views/site-screen.ejs
@@ -21,17 +21,18 @@
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
       crossorigin="anonymous"
     ></script>
-    <title>Norwich Heritage Tours - *Site name*</title>
+    <% sites.forEach(site => { %>
+    <title>Norwich Heritage Tours - <%= site.siteName %> </title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="site-gallery.html">
+        <a class="navbar-brand" href="/gallery">
           <span class="material-icons"> arrow_back_ios </span>
         </a>
-        <a class="navbar-brand" href="home.html">
+        <a class="navbar-brand" href="/">
           <img
-            src="../assets/images/logo.png"
+            src="/images/logo.png"
             alt="Logo"
             width="25"
             height="30"
@@ -69,7 +70,7 @@
         />
       </div>
       <div class="row">
-        <h2 class="title-text">*Site Name*</h2>
+        <h2 class="title-text"><%= site.siteName %></h2>
       </div>
       <div class="row site-audio-container">
           <audio class="site-audio"
@@ -80,14 +81,15 @@
           </audio>
       </div>
       <div class="row site-information">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque dapibus, urna sit amet maximus auctor, lacus metus faucibus erat, nec bibendum purus sapien nec lorem. Etiam eros eros, ultrices ut sem non, pretium dictum massa. Suspendisse neque dolor, pulvinar ut lorem eget, tempor venenatis nunc. Morbi eget commodo orci. Ut nibh massa, malesuada nec varius sit amet, ornare vel eros. Curabitur sit amet dictum sapien, at ultricies dui. Vestibulum volutpat, ligula sit amet viverra hendrerit, ante eros lacinia libero, eget suscipit augue massa elementum nunc. Sed ac aliquet nisl. Nunc in tellus erat. Nunc at luctus nisi. Cras malesuada consectetur interdum. Nullam eget ligula sed justo gravida rutrum vel sed ligula. Quisque varius lectus ut sem euismod luctus. Suspendisse ac mi et nisl luctus auctor et eget metus.</p>
+        <p><%= site.siteInfo %></p>
         <p>In dictum libero id sapien tempor porttitor. Aenean orci diam, viverra eget vehicula sit amet, volutpat eu dolor. Aliquam erat volutpat. Integer neque quam, ultrices quis sodales vitae, egestas ut nulla. Nunc tellus neque, vulputate id semper nec, rutrum eget arcu. Donec ullamcorper semper dolor sodales egestas. Suspendisse magna elit, dapibus quis quam eget, euismod tincidunt ante. Praesent et cursus nibh, id fermentum augue. Fusce faucibus dolor at dolor pellentesque, nec luctus sapien euismod.</p>
       </div>
       <div class="row">
-        <h3>Features on: *tour name*</h3>
+        <h3>Features on: <%= site.tours %></h3>
         <h3>(number) of metres away</h3>
         <h3>*Opening times*</h3>
       </div>
     </div>
+    <% }) %>
   </body>
 </html>
