--- a/views/home.ejs
+++ b/views/home.ejs
@@ -57,7 +57,7 @@
       </div>
       <div class="row home-main-content">
         <div class="col-md-3 col-sm-6 col-6 home-columns">
-          <a href="">
+          <a href="/tours">
           <button class="home-button">
             <span class="material-icons">
               tour
