--- a/views/home.ejs
+++ b/views/home.ejs
@@ -57,44 +57,36 @@
       </div>
       <div class="row home-main-content">
         <div class="col-md-3 col-sm-6 col-6 home-columns">
-          <a href="/tours">
-          <button class="home-button">
+          <button onclick="location.href= '/tours'" class="home-button" type="button">
             <span class="material-icons">
               tour
               </span>
             <h5>Tours</h5>
           </button>
-          </a>
         </div>
         <div class="col-md-3 col-sm-6 col-6 home-columns">
-          <a href="/gallery">
-          <button id="gallery-button" class="home-button">
+          <button onclick="location.href= '/gallery'" id="gallery-button" class="home-button" type="button">
             <span class="material-icons">
               collections
               </span>
             <h5>Site Gallery</h5>
           </button>
-          </a>
         </div>
         <div class="col-md-3 col-sm-6 col-6 home-columns">
-          <a href="">
-          <button class="home-button">
+          <button onclick="location.href= ''" class="home-button" type="button">
             <span class="material-icons">
               map
               </span>
             <h5>Map</h5>
           </button>
-          </a>
         </div>
         <div class="col-md-3 col-sm-6 col-6 home-columns">
-          <a href="">
-          <button class="home-button">
+          <button onclick="location.href= ''" class="home-button" type="button">
             <span class="material-icons">
               more_horiz
               </span>
             <h5>More</h5>
           </button>
-          </a>
         </div>
       </div>
     </div>
