--- a/views/tours-home.ejs
+++ b/views/tours-home.ejs
@@ -67,31 +67,33 @@
         <div class="row subtitle-text">
             <h3>*Choose a tour below*</h3>
         </div>
-        <div class="option-container">
-            <div class="row">
-                <h3 class="tour-title">Public buildings</h3>
-            </div>
-            <div class="time-text">
-                <h6>20-30 mins</h6>
-                <span class="material-icons tour-time-icon">
-                schedule
-                </span>
-            </div>
-            <div class="row">
-                <p>Brief description of the tour...</p>
-            </div>
-            <div class="row">
-                <h3 class="tour-title">Churches</h3>
-            </div>
-            <div class="time-text">
-                <h6>30-40 mins</h6>
-                <span class="material-icons tour-time-icon">
-                schedule
-                </span>
-            </div>
-            <div class="row">
-                <p>Brief description of the tour...</p>
-            </div>
+        <div class="row tours-options-container">
+          <div class="col-md-6 col-sm-6 col-12 tours-options">
+            <a href="/tours/churches">
+              <div class="card">
+                <img class="card-img-top" src="../images/peter-mancroft-church.jpg" alt="Image of the Peter Mancroft Church">
+                <div class="card-body">
+                  <h5 class="card-title">Churches</h5>
+                  <h6 class="card-subtitle mb-2 text-muted">20-30 mins <span class="material-icons tour-time-icon">schedule</span></h6>
+                  <p class="card-text">This tour will introduce you to the history and architecture of some of Norwich's oldest churches...</p>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-6 col-sm-6 col-12 tours-options">
+            <a href="/tours/public-buildings">
+              <div class="card">
+                <img class="card-img-top" src="../images/the-forum.jpg" alt="Image of The Forum">
+                <div class="card-body">
+                  <h5 class="card-title">Public Buildings</h5>
+                  <h6 class="card-subtitle mb-2 text-muted">30-40 mins <span class="material-icons tour-time-icon">
+                    schedule
+                    </span></h6>
+                  <p class="card-text">This tour will guide you around Norwich's public buildings and give you an insight into their history...</p>
+                </div>
+              </div>
+            </a>
+          </div>
         </div>
       </div>
 </body>
