Updated tours homescreen subtitle

--- a/views/tours-home.ejs
+++ b/views/tours-home.ejs
@@ -65,7 +65,7 @@
             <h2>Tours</h2>
         </div>
         <div class="row subtitle-text">
-            <h3>*Choose a tour below*</h3>
+            <h3>Select a tour below to begin exploring Norwich</h3>
         </div>
         <div class="row tours-options-container">
           <div class="col-md-6 col-sm-6 col-12 tours-options">
