Switched buttons for cards on home screen

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -43,9 +43,10 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
             <a class="nav-link active" aria-current="page" href="#">Home</a>
-            <a class="nav-link" href="#">Features</a>
-            <a class="nav-link" href="#">Pricing</a>
-            <a class="nav-link disabled">Disabled</a>
+            <a class="nav-link" href="/tours">Tours</a>
+            <a class="nav-link" href="/gallery">Gallery</a>
+            <a class="nav-link" href="/map">Map</a>
+            <a class="nav-link" href="/more">More</a>
           </div>
         </div>
       </div>
@@ -56,37 +57,49 @@
         <h3>Select an option</h3>
       </div>
       <div class="row home-main-content">
-        <div class="col-md-3 col-sm-6 col-6 home-columns">
-          <button onclick="location.href= '/tours'" class="home-button" type="button">
-            <span class="material-icons">
-              tour
-              </span>
-            <h5>Tours</h5>
-          </button>
+        <div class=".col-xl-3 col-lg-3 col-md-6 col-sm-6 col-12 home-columns">
+          <a href="/tours">
+            <div class="card h-100">
+              <img class="card-img-top" src="../images/tour-friends.jpg" alt="Image of the Peter Mancroft Church">
+              <div class="card-body">
+                <h5 class="card-title">Tours</h5>
+                <p class="card-text">Take a tour of Norwich's churches or public buildings.</p>
+              </div>
+            </div>
+          </a>
         </div>
-        <div class="col-md-3 col-sm-6 col-6 home-columns">
-          <button onclick="location.href= '/gallery'" id="gallery-button" class="home-button" type="button">
-            <span class="material-icons">
-              collections
-              </span>
-            <h5>Site Gallery</h5>
-          </button>
+        <div class=".col-xl-3 col-lg-3 col-md-6 col-sm-6 col-12 home-columns">
+          <a href="/gallery">
+            <div class="card h-100">
+              <img class="card-img-top" src="../images/norwich-castle.jpg" alt="Image of the Peter Mancroft Church">
+              <div class="card-body">
+                <h5 class="card-title">Gallery</h5>
+                <p class="card-text">View photos of each heritage site featured across all tours.</p>
+              </div>
+            </div>
+          </a>
         </div>
-        <div class="col-md-3 col-sm-6 col-6 home-columns">
-          <button onclick="location.href= ''" class="home-button" type="button">
-            <span class="material-icons">
-              map
-              </span>
-            <h5>Map</h5>
-          </button>
+        <div class=".col-xl-3 col-lg-3 col-md-6 col-sm-6 col-12 home-columns">
+          <a href="/">
+            <div class="card h-100">
+              <img class="card-img-top" src="../images/norwich-map.png" alt="Image of the Peter Mancroft Church">
+              <div class="card-body">
+                <h5 class="card-title">Map</h5>
+                <p class="card-text">Locate heritage sites on our interactive map.</p>
+              </div>
+            </div>
+          </a>
         </div>
-        <div class="col-md-3 col-sm-6 col-6 home-columns">
-          <button onclick="location.href= ''" class="home-button" type="button">
-            <span class="material-icons">
-              more_horiz
-              </span>
-            <h5>More</h5>
-          </button>
+        <div class=".col-xl-3 col-lg-3 col-md-6 col-sm-6 col-12 home-columns">
+          <a href="/">
+            <div class="card h-100">
+              <img class="card-img-top" src="../images/cog icon.png" alt="Image of the Peter Mancroft Church">
+              <div class="card-body">
+                <h5 class="card-title">More</h5>
+                <p class="card-text">Change accessbility options such as scale, colour scheme and more.</p>
+              </div>
+            </div>
+          </a>
         </div>
       </div>
     </div>
