--- a/public/home-styles.css
+++ b/public/home-styles.css
@@ -1,6 +1,7 @@
 body, html {
     margin: 0;
     padding: 0;
+    background-color: #FAF9F6;
 }
 a, a:hover, a:visited {
     text-decoration: none;
@@ -22,4 +23,17 @@ a, a:hover, a:visited {
 }
 .home-main-content {
     margin-top: 50px;
+}
+.card-img-top {
+    width: 100%;
+    height: 35vh;
+    object-fit: cover;
+}
+.card {
+    margin-bottom: 20px;
+    transition: 0.5s;
+}
+.card:hover {
+    cursor: pointer;
+    opacity: 0.5;
 }
