Initialised Google map on map screen

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -60,7 +60,7 @@
         <div class=".col-xl-3 col-lg-3 col-md-6 col-sm-6 col-12 home-columns">
           <a href="/tours">
             <div class="card h-100">
-              <img class="card-img-top" src="../images/tour-friends.jpg" alt="Image of the Peter Mancroft Church">
+              <img class="card-img-top" src="../images/tour-friends.jpg" alt="Two women looking at smartphone">
               <div class="card-body">
                 <h5 class="card-title">Tours</h5>
                 <p class="card-text">Take a tour of Norwich's churches or public buildings.</p>
@@ -71,7 +71,7 @@
         <div class=".col-xl-3 col-lg-3 col-md-6 col-sm-6 col-12 home-columns">
           <a href="/gallery">
             <div class="card h-100">
-              <img class="card-img-top" src="../images/norwich-castle.jpg" alt="Image of the Peter Mancroft Church">
+              <img class="card-img-top" src="../images/norwich-castle.jpg" alt="Norwich castle">
               <div class="card-body">
                 <h5 class="card-title">Gallery</h5>
                 <p class="card-text">View photos of each heritage site featured across all tours.</p>
@@ -80,9 +80,9 @@
           </a>
         </div>
         <div class=".col-xl-3 col-lg-3 col-md-6 col-sm-6 col-12 home-columns">
-          <a href="/">
+          <a href="/map">
             <div class="card h-100">
-              <img class="card-img-top" src="../images/norwich-map.png" alt="Image of the Peter Mancroft Church">
+              <img class="card-img-top" src="../images/norwich-map.png" alt="Map of Norwich">
               <div class="card-body">
                 <h5 class="card-title">Map</h5>
                 <p class="card-text">Locate heritage sites on our interactive map.</p>
@@ -93,7 +93,7 @@
         <div class=".col-xl-3 col-lg-3 col-md-6 col-sm-6 col-12 home-columns">
           <a href="/">
             <div class="card h-100">
-              <img class="card-img-top" src="../images/cog icon.png" alt="Image of the Peter Mancroft Church">
+              <img class="card-img-top" src="../images/cog icon.png" alt="Image of cog">
               <div class="card-body">
                 <h5 class="card-title">More</h5>
                 <p class="card-text">Change accessbility options such as scale, colour scheme and more.</p>
