--- a/views/home.ejs
+++ b/views/home.ejs
@@ -15,6 +15,9 @@
     <link href= "/public/global-styles.css" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lexend&display=swap" rel="stylesheet">
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
@@ -23,7 +26,7 @@
     <title>Norwich Heritage Tours - Home</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg bg-light">
+    <nav class="navbar navbar-expand-lg nav-background">
       <div class="container-fluid">
         <a class="navbar-brand" href="/">
           <img src="/images/logo.png" alt="Logo" width="25" height="30" class="d-inline-block align-text-top">
@@ -54,7 +57,7 @@
     <div class="container">
       <div class="row title-text">
         <h2>Welcome to Norwich Heritage Tours</h2>
-        <h3>Select an option</h3>
+        <h3 class="home-subtitle">Select an option</h3>
       </div>
       <div class="row home-main-content">
         <div class=".col-xl-3 col-lg-3 col-md-6 col-sm-6 col-12 home-columns">
