Added all heritage sites to map

--- a/views/map.ejs
+++ b/views/map.ejs
@@ -69,7 +69,7 @@
       </nav>
       <div class="container">
         <div class="row title-text">
-            <h2>Norwich heritage site map</h2>
+            <h2>Inner Norwich heritage site map</h2>
         </div>
         <div class="row subtitle-text">
             <h3>Click on a point to learn more about each heritage site</h3>
