--- a/views/tours-home.ejs
+++ b/views/tours-home.ejs
@@ -76,9 +76,9 @@
               <div class="card">
                 <img class="card-img-top" src="../images/peter-mancroft-church.jpg" alt="Image of the Peter Mancroft Church">
                 <div class="card-body">
-                  <h5 class="card-title">Churches</h5>
+                  <h5 class="card-title">Churches of Inner Norwich</h5>
                   <h6 class="card-subtitle mb-2 text-muted">20-30 mins <span class="material-icons tour-time-icon">schedule</span></h6>
-                  <p class="card-text">This tour will introduce you to the history and architecture of some of Norwich's oldest churches...</p>
+                  <p class="card-text">This tour will introduce you to the history and architecture of some of Norwich's oldest churches.</p>
                 </div>
               </div>
             </a>
@@ -88,11 +88,11 @@
               <div class="card">
                 <img class="card-img-top" src="../images/the-forum.jpg" alt="Image of The Forum">
                 <div class="card-body">
-                  <h5 class="card-title">Public Buildings</h5>
+                  <h5 class="card-title">Public Buildings of Inner Norwich</h5>
                   <h6 class="card-subtitle mb-2 text-muted">30-40 mins <span class="material-icons tour-time-icon">
                     schedule
                     </span></h6>
-                  <p class="card-text">This tour will guide you around Norwich's public buildings and give you an insight into their history...</p>
+                  <p class="card-text">This tour will guide you around Norwich's public buildings and give you an insight into their history.</p>
                 </div>
               </div>
             </a>
