--- a/public/site-screen-styles.css
+++ b/public/site-screen-styles.css
@@ -2,10 +2,14 @@
     height: 100vh;
 }
 .image-container {
+    margin-top: 20px;
+    display: flex;
+    justify-content: center;
     height: 200px;
 }
 .site-image {
     width:100%;
+    object-fit: cover;
     max-height:100%;
 }
 .title-audio-player {
