--- a/views/map.ejs
+++ b/views/map.ejs
@@ -72,7 +72,7 @@
             <h2>Inner Norwich heritage site map</h2>
         </div>
         <div class="row subtitle-text">
-            <h3>Click on a point to learn more about each heritage site</h3>
+            <h3>Click on a point to learn more about each heritage site featured on our tours</h3>
         </div>
         <div class="col-12 mt-5 map-container">
             <div id="map"></div>
