--- a/views/site-gallery.ejs
+++ b/views/site-gallery.ejs
@@ -55,10 +55,11 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-            <a class="nav-link" href="#">Features</a>
-            <a class="nav-link" href="#">Pricing</a>
-            <a class="nav-link disabled">Disabled</a>
+            <a class="nav-link active" aria-current="page" href="/">Home</a>
+            <a class="nav-link" href="/tours-home">Tours</a>
+            <a class="nav-link" href="/gallery">Gallery</a>
+            <a class="nav-link" href="/map">Map</a>
+            <a class="nav-link" href="/more">More</a>
           </div>
         </div>
       </div>
