Added user location update code

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -60,7 +60,7 @@
         <h3 class="home-subtitle">Select an option</h3>
       </div>
       <div class="row home-main-content">
-        <div class=".col-xl-3 col-lg-3 col-md-6 col-sm-6 col-12 home-columns">
+        <div class=".col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 home-columns">
           <a href="/tours">
             <div class="card h-100">
               <img class="card-img-top" src="../images/tour-friends.jpg" alt="Two women looking at smartphone">
@@ -71,7 +71,7 @@
             </div>
           </a>
         </div>
-        <div class=".col-xl-3 col-lg-3 col-md-6 col-sm-6 col-12 home-columns">
+        <div class=".col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 home-columns">
           <a href="/gallery">
             <div class="card h-100">
               <img class="card-img-top" src="../images/norwich-castle.jpg" alt="Norwich castle">
@@ -82,24 +82,13 @@
             </div>
           </a>
         </div>
-        <div class=".col-xl-3 col-lg-3 col-md-6 col-sm-6 col-12 home-columns">
+        <div class=".col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 home-columns">
           <a href="/map">
             <div class="card h-100">
               <img class="card-img-top" src="../images/norwich-map.png" alt="Map of Norwich">
               <div class="card-body">
                 <h5 class="card-title">Map</h5>
-                <p class="card-text">Locate heritage sites on our interactive map.</p>
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class=".col-xl-3 col-lg-3 col-md-6 col-sm-6 col-12 home-columns">
-          <a href="/">
-            <div class="card h-100">
-              <img class="card-img-top" src="../images/cog icon.png" alt="Image of cog">
-              <div class="card-body">
-                <h5 class="card-title">More</h5>
-                <p class="card-text">Change accessbility options such as scale, colour scheme and more.</p>
+                <p class="card-text">Locate heritage sites on our interactive map and learn more about them.</p>
               </div>
             </div>
           </a>
