--- a/views/map.ejs
+++ b/views/map.ejs
@@ -26,7 +26,7 @@
     <script async
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyANPJXyZnJG659k1QzEUfK3quG8aKjKrH8&callback=initMap">
     </script>
-    <script src="../public/maps-frontend.js"></script>
+    <script src="../public/main-map-frontend.js"></script>
     <title>Norwich Heritage Tours - Site Map</title>
 </head>
 <body>
