--- a/views/public-buildings.ejs
+++ b/views/public-buildings.ejs
@@ -4,12 +4,79 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Bootstrap CDN -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      crossorigin="anonymous"
+    />
+    <link href= "/public/map-styles.css" rel="stylesheet" type="text/css" />
+    <link href= "/public/global-styles.css" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lexend&display=swap" rel="stylesheet">
-    <title>Norwich Heritage Tourism - Public Buildings Tour</title>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+      crossorigin="anonymous"
+    ></script>
+    <script async
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyANPJXyZnJG659k1QzEUfK3quG8aKjKrH8&callback=initMap">
+    </script>
+    <script src="../public/public-buildings-map-frontend.js"></script>
+    <title>Norwich Heritage Tours - Site Map</title>
 </head>
 <body>
-    <h1>Hello World 2!</h1>
+    <nav class="navbar navbar-expand-lg nav-background">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="/">
+            <span class="material-icons back-arrow"> arrow_back_ios </span>
+          </a>
+          <a class="navbar-brand" href="/">
+            <img
+              src="/images/logo.png"
+              alt="Logo"
+              width="25"
+              height="30"
+              class="d-inline-block align-text-top"
+            />
+            Norwich Heritage Tours
+          </a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+              <a class="nav-link active" aria-current="page" href="/">Home</a>
+              <a class="nav-link" href="/tours">Tours</a>
+              <a class="nav-link" href="/gallery">Gallery</a>
+              <a class="nav-link" href="/map">Map</a>
+              <a class="nav-link" href="/more">More</a>
+            </div>
+          </div>
+        </div>
+      </nav>
+      <div class="container">
+        <div class="row title-text">
+            <h2>Inner Norwich Public Buildings Tour</h2>
+        </div>
+        <div class="row subtitle-text">
+            <h5>Click on a point to learn more about each public building. For the best experience, we recommend visiting each site in the order specified (1-7). The green point marks your current location and will update as you move.</h3>
+        </div>
+        <div class="col-12 mt-5 map-container">
+            <div id="map"></div>
+        </div>
+      </div>
 </body>
 </html>
