Added second information section

--- a/views/site-screen.ejs
+++ b/views/site-screen.ejs
@@ -87,6 +87,9 @@
       <div class="row site-information">
         <p><%= site.siteInfo %></p>
       </div>
+      <div class="row site-information">
+        <p><%= site.moreInfo %></p>
+      </div>
       <div class="row">
         <h3>Features on: <%= site.tours %></h3>
         <h3>(number) of metres away</h3>
