Edited site info tags

--- a/views/site-screen.ejs
+++ b/views/site-screen.ejs
@@ -85,10 +85,13 @@
           </audio>
       </div>
       <div class="row site-information">
-        <p><%= site.siteInfo %></p>
+        <p><%= site.siteInfo1 %></p>
       </div>
       <div class="row site-information">
-        <p><%= site.moreInfo %></p>
+        <p><%= site.siteInfo2 %></p>
+      </div>
+      <div class="row site-information">
+        <p><%= site.siteInfo3 %></p>
       </div>
       <div class="row">
         <h3>Features on: <%= site.tours %></h3>
