Added placeholder image and audio for testing

--- a/views/site-gallery.ejs
+++ b/views/site-gallery.ejs
@@ -75,7 +75,7 @@
         <div class="col-md-3 col-sm-6 col-6 site-gallery-images">
           <a href="/gallery/1">
             <img
-            src="https://picsum.photos/300"
+            src="https://storage.cloud.google.com/heritage-tourism-store/hax.png"
             class="img-fluid gallery-image"
             alt="Responsive image"
           />
