--- a/views/site-screen.ejs
+++ b/views/site-screen.ejs
@@ -79,8 +79,8 @@
       <div class="row site-audio-container">
           <audio class="site-audio"
               controls
-              src="https://storage.cloud.google.com/heritage-tourism-store/test%20mp3.mp3">
-                  <a href="https://storage.cloud.google.com/heritage-tourism-store/test%20mp3.mp3">
+              src="https://storage.googleapis.com/heritage-tourism-store/test%20mp3.mp3">
+                  <a href="https://storage.googleapis.com/heritage-tourism-store/test%20mp3.mp3">
                   </a>
           </audio>
       </div>
