Added public buildings images to gallery

--- a/views/site-gallery.ejs
+++ b/views/site-gallery.ejs
@@ -75,7 +75,7 @@
         <div class="col-md-3 col-sm-6 col-6 site-gallery-images">
           <a href="/gallery/1">
             <img
-            src="https://storage.googleapis.com/heritage-tourism-store/hax.png"
+            src="https://storage.googleapis.com/heritage-tourism-store/norwich-castle.jpg"
             class="img-fluid gallery-image"
             alt="Responsive image"
           />
@@ -83,35 +83,49 @@
         </div>
         <div class="col-md-3 col-sm-6 col-6 site-gallery-images">
           <img
-            src="https://picsum.photos/300"
+            src="https://storage.googleapis.com/heritage-tourism-store/norwich-guildhall.jpg"
             class="img-fluid gallery-image"
             alt="Responsive image"
           />
         </div>
         <div class="col-md-3 col-sm-6 col-6 site-gallery-images">
           <img
-            src="https://picsum.photos/300"
+            src="https://storage.googleapis.com/heritage-tourism-store/norwich-anglia-house.jpg"
             class="img-fluid gallery-image"
             alt="Responsive image"
           />
         </div>
         <div class="col-md-3 col-sm-6 col-6 site-gallery-images">
           <img
-            src="https://picsum.photos/300"
+            src="https://storage.googleapis.com/heritage-tourism-store/norwich-city-hall.jpg"
             class="img-fluid gallery-image"
             alt="Responsive image"
           />
         </div>
         <div class="col-md-3 col-sm-6 col-6 site-gallery-images">
           <img
-            src="https://picsum.photos/300"
+            src="https://storage.googleapis.com/heritage-tourism-store/norwich-the-forum.jpg"
             class="img-fluid gallery-image"
             alt="Responsive image"
           />
         </div>
         <div class="col-md-3 col-sm-6 col-6 site-gallery-images">
           <img
-            src="https://picsum.photos/300"
+            src="https://storage.googleapis.com/heritage-tourism-store/norwich-strangers-hall.jpg"
+            class="img-fluid gallery-image"
+            alt="Responsive image"
+          />
+        </div>
+        <div class="col-md-3 col-sm-6 col-6 site-gallery-images">
+          <img
+            src="https://storage.googleapis.com/heritage-tourism-store/norwich-great-hospital.jpg"
+            class="img-fluid gallery-image"
+            alt="Responsive image"
+          />
+        </div>
+        <div class="col-md-3 col-sm-6 col-6 site-gallery-images">
+          <img
+            src="https://storage.googleapis.com/heritage-tourism-store/norwich-strangers-hall.jpg"
             class="img-fluid gallery-image"
             alt="Responsive image"
           />
