Updated image alt tag content.

--- a/views/site-gallery.ejs
+++ b/views/site-gallery.ejs
@@ -77,7 +77,7 @@
             <img
             src="https://storage.googleapis.com/heritage-tourism-store/norwich-castle.jpg"
             class="img-fluid gallery-image"
-            alt="Responsive image"
+            alt="An image of the exterior of Norwich Castle."
           />
           </a>
         </div>
@@ -85,42 +85,42 @@
           <img
             src="https://storage.googleapis.com/heritage-tourism-store/norwich-guildhall.jpg"
             class="img-fluid gallery-image"
-            alt="Responsive image"
+            alt="An image of the exterior of The Guildhall."
           />
         </div>
         <div class="col-md-3 col-sm-6 col-6 site-gallery-images">
           <img
             src="https://storage.googleapis.com/heritage-tourism-store/norwich-anglia-house.jpg"
             class="img-fluid gallery-image"
-            alt="Responsive image"
+            alt="An image of the exterior of Anglia House."
           />
         </div>
         <div class="col-md-3 col-sm-6 col-6 site-gallery-images">
           <img
             src="https://storage.googleapis.com/heritage-tourism-store/norwich-city-hall.jpg"
             class="img-fluid gallery-image"
-            alt="Responsive image"
+            alt="An image of the exterior of City Hall at night."
           />
         </div>
         <div class="col-md-3 col-sm-6 col-6 site-gallery-images">
           <img
             src="https://storage.googleapis.com/heritage-tourism-store/norwich-the-forum.jpg"
             class="img-fluid gallery-image"
-            alt="Responsive image"
+            alt="An image of the exterior of The Forum."
           />
         </div>
         <div class="col-md-3 col-sm-6 col-6 site-gallery-images">
           <img
             src="https://storage.googleapis.com/heritage-tourism-store/norwich-strangers-hall.jpg"
             class="img-fluid gallery-image"
-            alt="Responsive image"
+            alt="An image of the exterior of Strangers' Hall."
           />
         </div>
         <div class="col-md-3 col-sm-6 col-6 site-gallery-images">
           <img
             src="https://storage.googleapis.com/heritage-tourism-store/norwich-great-hospital.jpg"
             class="img-fluid gallery-image"
-            alt="Responsive image"
+            alt="An image of the exterior of the buildings at The Great Hospital."
           />
         </div>
         <div class="col-md-3 col-sm-6 col-6 site-gallery-images">
