Added images of churches to gallery

--- a/views/site-gallery.ejs
+++ b/views/site-gallery.ejs
@@ -137,44 +137,51 @@
       <div class="row">
         <div class="col-md-3 col-sm-6 col-6 site-gallery-images">
           <img
-            src="https://picsum.photos/300"
+            src="https://storage.googleapis.com/heritage-tourism-store/norwich-all-saints-church.jpg"
             class="img-fluid gallery-image"
-            alt="Responsive image"
+            alt="An image of the exterior view of All Saint's Church."
           />
         </div>
         <div class="col-md-3 col-sm-6 col-6 site-gallery-images">
           <img
-            src="https://picsum.photos/300"
+            src="https://storage.googleapis.com/heritage-tourism-store/norwich-peter-mancroft.jpg"
             class="img-fluid gallery-image"
-            alt="Responsive image"
+            alt="An image of the exterior view of St Peter Mancroft Church."
           />
         </div>
         <div class="col-md-3 col-sm-6 col-6 site-gallery-images">
           <img
-            src="https://picsum.photos/300"
+            src="https://storage.googleapis.com/heritage-tourism-store/norwich-st-stephens.jpg"
             class="img-fluid gallery-image"
-            alt="Responsive image"
+            alt="An image of the exterior view of St Stephen's Church."
           />
         </div>
         <div class="col-md-3 col-sm-6 col-6 site-gallery-images">
           <img
-            src="https://picsum.photos/300"
+            src="https://storage.googleapis.com/heritage-tourism-store/norwich-st-andrews.jpg"
             class="img-fluid gallery-image"
-            alt="Responsive image"
+            alt="An image of the exterior view of St Andrew's Church."
           />
         </div>
         <div class="col-md-3 col-sm-6 col-6 site-gallery-images">
           <img
-            src="https://picsum.photos/300"
+            src="https://storage.googleapis.com/heritage-tourism-store/norwich-st-benedicts.jpg"
             class="img-fluid gallery-image"
-            alt="Responsive image"
+            alt="An image of the last existing tower of St Benedict's Church"
           />
         </div>
         <div class="col-md-3 col-sm-6 col-6 site-gallery-images">
           <img
-            src="https://picsum.photos/300"
+            src="https://storage.googleapis.com/heritage-tourism-store/norwich-st-laurences.jpg"
             class="img-fluid gallery-image"
-            alt="Responsive image"
+            alt="An image of the exterior view of St Laurence's Church"
+          />
+        </div>
+        <div class="col-md-3 col-sm-6 col-6 site-gallery-images">
+          <img
+            src="https://storage.googleapis.com/heritage-tourism-store/norwich-st-gregorys.jpg"
+            class="img-fluid gallery-image"
+            alt="An image of the exterior view of St Gregory's Church"
           />
         </div>
       </div>
