--- a/views/site-gallery.ejs
+++ b/views/site-gallery.ejs
@@ -92,7 +92,7 @@
       </div>
       <div class="row">
         <div class="col-md-3 col-sm-6 col-6 site-gallery-images">
-          <button data-bs-toggle="modal" data-bs-target="#site-modal">
+          <button id="9" data-bs-toggle="modal" data-bs-target="#site-modal">
             <img
             src="https://storage.googleapis.com/heritage-tourism-store/norwich-castle.jpg"
             class="img-fluid gallery-image"
